--- a/src/css/main.css
+++ b/src/css/main.css
@@ -225,3 +225,37 @@ margin-bottom:9px;
 color: #000;
 text-shadow: none;
 }
+
+/********************************************/
+/*font faces and styles here */
+/*
+ *  Font Awesome by Dave Gandy - http://fontawesome.io
+ */
+@font-face{
+font-family: Action_Man_Bold_Italic;
+src: url(../fonts/Action_Man_Bold_Italic.ttf);
+}
+
+/*font awesome styles and classes */
+@font-face{
+font-family:FontAwesome;
+src:url(../fonts/fontawesome-webfont.eot?v=4.2.0);
+src:url(../fonts/fontawesome-webfont.eot?#iefix&v=4.2.0) format('embedded-opentype'),
+url(../fonts/fontawesome-webfont.woff?v=4.2.0) format('woff'),
+url(../fonts/fontawesome-webfont.ttf?v=4.2.0) format('truetype'),
+url(../fonts/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular) format('svg');
+font-weight:400;
+font-style:normal
+}
+
+.fa{
+display:inline-block;
+font:normal normal normal 14px/1 FontAwesome;
+font-size:inherit;
+text-rendering:auto;
+-webkit-font-smoothing:antialiased;
+-moz-osx-font-smoothing:grayscale
+}
+.fa-envelope:before{content:"\f0e0"}
+
+.fa-heart:before{content:"\f004"}
