--- a/src/css/main.css
+++ b/src/css/main.css
@@ -249,38 +249,50 @@ background-color: #0cfaf2;
 
 .button_style{
 margin: 10px auto 10px auto;
-padding: 10px 8px;
-width: 160px;
+
 outline: 0; 
 border: 0;
+
 -webkit-box-shadow: inset 0px -1px 0px 0px rgba(11, 10, 10, 1), inset 0px 1px 0px 0px rgba(172, 172,172, 1);
 -moz-box-shadow:    inset 0px -1px 0px 0px rgba(11, 10, 10,1), inset 0px 1px 0px 0px rgba(172, 172,172, 1);
 box-shadow:        inset 0px -1px 0px 0px rgba(11, 10, 10, 1), inset 0px 1px 0px 0px rgba(172, 172,172, 1);
 
 font-weight: bold;
 text-align: center;
-background: #000;
-color: #05fbf3;
-text-shadow: 0 0 0 #000, 1px 1px 15px #05fbf3, 1px 1px 20px #05fbf3;
+
+
 border-left: 1px solid #525353;
 border-right: 1px solid #525353;
--webkit-border-radius: 6px;
--moz-border-radius: 6px;
-border-radius: 6px;
 display: block;
 cursor: pointer;
 font-size: 1.7rem;
-color: #fff;
+
 text-shadow: 0 0 0 #000, 1px 1px 10px #fff;
 }
 
 .button_style:active, .button_style:hover{
-border-top: 1px solid #000;
+
+}
+
+
+.main_button_style{
+background: #000;
+color: #fff;
+width: 160px;
+padding: 10px 8px;
+-webkit-border-radius: 6px;
+-moz-border-radius: 6px;
+border-radius: 6px;
+
+}
+.main_button_style:active, .main_button_style:hover{
 background: #fff;
-margin-bottom:9px;
+border-top: 1px solid #000;
 color: #000;
 text-shadow: none;
+margin-bottom:9px;
 }
+
 
 /********************************************/
 /*font faces and styles here */
