--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,60 +1,14 @@
-
-header{
-position:relative;
-}
-
-@media screen and (min-width: 210px) and (max-width: 479px) {
-.menu_wrapper{
-margin: 0px auto 0px auto;
-padding: 3px 1% 3px 1%;
-height: 30px;
-}
-.menu_bar_style{
-height: 36px;
-}
-}
-
-@media screen and (min-width: 480px) and (max-width: 719px) { 
-.menu_wrapper{
-margin: 3px auto 3px auto;
-padding: 5px 1% 5px 1%;
-height: 50px;
-}
-.menu_bar_style{
-height: 70px;
-}
-
-}
-
-
-@media screen and (min-width: 720px){ 
-.menu_wrapper{
-margin: 3px auto 3px auto;
-padding: 10px 1% 10px 1%;
-height: 80px;
-}
-.menu_bar_style{
-height: 90px;
-}
-}
-
-/********************************************/
-
 header{
 position: fixed;
-top: 0px;
 left: 0px;
+top: 0px;
 display: block;
-width: 98%;
-max-width: 98%; 
+width: 100%;
+max-width: 100%; 
+height: 48px;
 z-index: 10;
 background: #2a2a2a; /* Old browsers */
-background: -moz-linear-gradient(top,  #2a2a2a 0%, #171717 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  #2a2a2a 0%,#171717 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  #2a2a2a 0%,#171717 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2a2a2a', endColorstr='#171717',GradientType=0 ); /* IE6-9 */
+padding: 10px 0x;
 text-align: center;
 
-
-padding: 10px 1% 10px 1%;
 }
