Re-organized CSS styles

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -113,7 +113,7 @@ text-shadow: 0 0 0 #000, 1px 1px 15px #05fbf3;
 
 h2{
 text-align: center;
-padding-top: 5px;
+padding: 5px 0px 8px 0px;
 font-family:Action_Man_Bold_Italic;
 color: #05fbf3;
 text-shadow: 0 0 0 #000, 1px 1px 15px #05fbf3;
