--- a/src/components/OriginalForm/original_form.css
+++ b/src/components/OriginalForm/original_form.css
@@ -1,20 +1,6 @@
 
 @media screen and (min-width: 210px) and (max-width: 479px) {
 
-
-#main_content_area{
-
-width: 95%;
-top: 80px;
-left: 2%;
-min-height: 100px;
-}
-
-#user_interactive_area{
-
-min-height: 100px;
-padding: 7px 7px 3px 7px;
-}
 label{
 font-size: 1.4rem;
 margin:4px 0px 3px 0px;
@@ -28,17 +14,6 @@ width: 70%;
 
 @media screen and (min-width: 480px) and (max-width: 719px) { 
 
-#main_content_area{
-width: 86%;
-top: 130px;
-left: 7%;
-min-height: 100px;
-}
-#user_interactive_area{
-
-min-height: 150px;
-padding: 10px 10px 15px 10px;
-}
 label{
 font-size: 1.6rem;
 margin:7px 0px 5px 0px;
@@ -52,20 +27,6 @@ width: 60%;
 
 @media screen and (min-width: 720px){ 
 
-
-#main_content_area{
-width: 54%;
-top: 180px;
-left: 23%;
-min-height: 170px;
-
-}
-
-#user_interactive_area{
-
-min-height: 170px;
-padding: 10px 10px 15px 10px;
-}
 label{
 font-size: 1.7rem;
 margin:10px 0px 8px 0px;
@@ -78,39 +39,13 @@ width: 56%;
 }
 
 
-#main_content_area{
-position: absolute;
-z-index: 9;
-overflow: visible;
-
-}
-#user_interactive_area{
-position: relative;
-
-overflow: hidden;
-z-index: 2;
-
-}
-.background_color{
-display: block;
-opacity: 0.7; 
-filter: alpha(opacity=70);
-background: #000;
-top: 0px;
-left: 0px;
-z-index: 1;
-width: 100%;
-height: 1000px;
-max-height: 100%;
-position: absolute;
-border: 1px solid #565555;
-border-radius: 10px;
-}
 label{
 display:block;
+padding: 5px 0px;
 z-index: 3;
 color: #fff;
 text-align: center;
+margin: 10px 0px 5px 0px;
 }
 
 input[type=text], input[type=email], textarea{
@@ -124,23 +59,24 @@ border-radius:2px;  /*opera*/
 -moz-border-radius:2px;/*firefox*/
 -webkit-border-radius:2px;/*chrome and safari*/
 padding-left: 5px;
-margin:0px auto 15px auto;
+margin:5px auto 15px auto;
 display: block;
 }
 
 input[type=text], input[type=email]{
 height: 28px;
 }
+
+
 text_area{
 height: 90px;
-
 }
 
 /*styling to prevent chrome's yellow colour input field after autocomplete*/
 input:-webkit-autofill {
 -webkit-box-shadow: inset 0px 0px 0px 100px #c8c8c8;
 }
-
+/*styling for placeholder*/
 input:-moz-placeholder{ 
 color: #636466; 	
 }
